# apf-recipe-management-restapi

./: README.md  main.py  pyproject.toml
assets/: ingredients.json
controllers/: __init__.py
controllers/ingredients/: create_new_ingredient.py  get_all_ingredients.py  update_an_ingredient.py
controllers/recipes/: create_new_recipe.py  delete_a_recipe.py  get_all_recipes.py  update_recipe_request.py
models/: __init__.py  ingredient.py  nutritional_info.py  recipe.py  update_requests.py
routes/: __init__.py  ingredient.py  recipe.py
utils/: __init__.py  generate_id.py  load_from_local_json.py
